--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
+    <title>Justin Venezuela</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <div class="jven-header">
