--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,9 @@
 <html>
   <head>
+    <title>Justin Venezuela - Resume</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <div class="jven-header">
