--- a/resume.html
+++ b/resume.html
@@ -15,6 +15,9 @@
         <li>
           <span>[ Resume ]</span>
         </li>
+        <li>
+          <a href="thoughts.html">Thoughts</a>
+        </li>
       </ol>
     </div>
     <div class="jven-body">
