Moves stuff to client/ in preparation for adding a server.

--- a/client/altitude-sickness.html
+++ b/client/altitude-sickness.html
@@ -2,7 +2,7 @@
   <head>
     <title>Justin Venezuela - Altitude sickness</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
