--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>Justin Venezuela - Thoughts</title>
+    <title>Justin Venezuela</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
@@ -10,31 +10,23 @@
       <h1>Justin Venezuela</h1>
       <ol class="jven-navigation">
         <li>
-          <a href="index.html">Who am I?</a>
+          <span>[ Who am I? ]</span>
         </li>
         <li>
           <a href="resume.html">Resume</a>
         </li>
         <li>
-          <span>[ Thoughts ]</span>
+          <a href="thoughts.html">Thoughts</a>
         </li>
       </ol>
     </div>
     <div class="jven-body">
-      <ul class="jven-thoughts-list">
-        <a href="altitude-sickness.html">
-          <h2>Altitude sickness</h2>
-          <h3>September 14, 2018 - Salkantay Mountain, Peru</h3>
-        </a>
-        <a href="wet-hike.html">
-          <h2>Wet hike</h2>
-          <h3>August 25, 2018 - Sk&oacute;gar, Iceland</h3>
-        </a>
-        <a href="hollywood-endings.html">
-          <h2>Hollywood endings</h2>
-          <h3>August 19, 2018 - Montreal, Quebec</h3>
-        </a>
-      </ul>
+      <div class="jven-index-caption">
+        <p>I'm a software engineer, pianist, rock climber, and chess player.</p>
+        <p>I live, work, and play in New York City.</p>
+        <p>E-mail me at <a href="mailto:jven@jvenezue.la">jven@jvenezue.la</a>. :)</p>
+      </div>
+      <img class="jven-index-me" src="img/me.png">
     </div>
     <div class="jven-footer">
       <div class="jven-links">
