Adds a server. Serves HTML files using shorter URLs (eg /resume instead of /resume.html).

--- a/client/altitude-sickness.html
+++ b/client/altitude-sickness.html
@@ -3,20 +3,20 @@
     <title>Justin Venezuela - Altitude sickness</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="/favicon.ico">
   </head>
   <body>
     <div class="jven-header">
       <h1>Justin Venezuela</h1>
       <ol class="jven-navigation">
         <li>
-          <a href="index.html">Who am I?</a>
+          <a href="/">Who am I?</a>
         </li>
         <li>
-          <a href="resume.html">Resume</a>
+          <a href="/resume">Resume</a>
         </li>
         <li>
-          <a href="thoughts.html">Thoughts</a>
+          <a href="/thoughts">Thoughts</a>
         </li>
       </ol>
     </div>
