--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
     <title>Justin Venezuela</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="/favicon.ico">
   </head>
   <body>
     <div class="jven-header">
@@ -13,10 +13,10 @@
           <span>[ Who am I? ]</span>
         </li>
         <li>
-          <a href="resume.html">Resume</a>
+          <a href="/resume">Resume</a>
         </li>
         <li>
-          <a href="thoughts.html">Thoughts</a>
+          <a href="/thoughts">Thoughts</a>
         </li>
       </ol>
     </div>
@@ -26,7 +26,7 @@
         <p>I live, work, and play in New York City.</p>
         <p>E-mail me at <a href="mailto:jven@jvenezue.la">jven@jvenezue.la</a>. :)</p>
       </div>
-      <img class="jven-index-me" src="img/me.png">
+      <img class="jven-index-me" src="/img/me.png">
     </div>
     <div class="jven-footer">
       <div class="jven-links">
