--- a/client/thoughts.html
+++ b/client/thoughts.html
@@ -3,17 +3,17 @@
     <title>Justin Venezuela - Thoughts</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="/favicon.ico">
   </head>
   <body>
     <div class="jven-header">
       <h1>Justin Venezuela</h1>
       <ol class="jven-navigation">
         <li>
-          <a href="index.html">Who am I?</a>
+          <a href="/">Who am I?</a>
         </li>
         <li>
-          <a href="resume.html">Resume</a>
+          <a href="/resume">Resume</a>
         </li>
         <li>
           <span>[ Thoughts ]</span>
@@ -22,15 +22,15 @@
     </div>
     <div class="jven-body">
       <ul class="jven-thoughts-list">
-        <a href="altitude-sickness.html">
+        <a href="/altitude-sickness">
           <h2>Altitude sickness</h2>
           <h3>September 14, 2018 - Salkantay Mountain, Peru</h3>
         </a>
-        <a href="wet-hike.html">
+        <a href="/wet-hike">
           <h2>Wet hike</h2>
           <h3>August 25, 2018 - Sk&oacute;gar, Iceland</h3>
         </a>
-        <a href="hollywood-endings.html">
+        <a href="/hollywood-endings">
           <h2>Hollywood endings</h2>
           <h3>August 19, 2018 - Montreal, Quebec</h3>
         </a>
