--- a/client/resume.html
+++ b/client/resume.html
@@ -3,26 +3,26 @@
     <title>Justin Venezuela - Resume</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="/favicon.ico">
   </head>
   <body>
     <div class="jven-header">
       <h1>Justin Venezuela</h1>
       <ol class="jven-navigation">
         <li>
-          <a href="index.html">Who am I?</a>
+          <a href="/">Who am I?</a>
         </li>
         <li>
           <span>[ Resume ]</span>
         </li>
         <li>
-          <a href="thoughts.html">Thoughts</a>
+          <a href="/thoughts">Thoughts</a>
         </li>
       </ol>
     </div>
     <div class="jven-body">
       <div class="jven-resume">
-        <a href="resume.pdf">(download as PDF)</a>
+        <a href="/resume.pdf" target="_blank">(download as PDF)</a>
         <iframe src="https://docs.google.com/document/d/1IZKWq9eoIdVvlAVpDbCwRB6wBfv8hhctBHPhwSeyrKE/preview"></iframe>
       </div>
     </div>
