Adds a post about RC.

--- a/client/thoughts.html
+++ b/client/thoughts.html
@@ -34,6 +34,10 @@
           <h2>Hollywood endings</h2>
           <h3>August 19, 2018 - Montreal, Quebec</h3>
         </a>
+        <a href="/recurse-center">
+          <h2>Recurse center</h2>
+          <h3>December 14, 2018 - Brooklyn, NY</h3>
+        </a>
       </ul>
     </div>
     <div class="jven-footer">
